--- a/Web Design coursework/classes.html
+++ b/Web Design coursework/classes.html
@@ -76,7 +76,6 @@
             <div class="clear"></div>
         </div>
     </div>
-
     <div class="main">
         <div class="about_banner_img"><img src="images/class_img.jpg" class="img-responsive" alt=""/></div>
         <div class="about_banner_wrap">
@@ -238,10 +237,69 @@
                 </div>
                 <div class="clear"></div>
             </div>
-
         </div>
 
+    <div class="footer-bottom">
+        <div class="container">
+            <div class="row section group">
+                <div class="col-md-4">
+                    <h4 class="m_7">Newsletter Signup</h4>
+                    <p class="m_8">Sign up to our newsletter to keep track of updates in and around our gym!</p>
+                    <form class="subscribe">
+                        <input type="text" value="Insert Email" onfocus="this.value = '';" onblur="if (this.value == '') { this.value = 'Insert Email';}">
+                    </form>
+                    <div class="subscribe1">
+                        <a href="#">Submit Email<i class="but_arrow"></i></a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="f-logo">
+                        <img src="images/logo.png" alt=""/>
+                    </div>
+                    <p class="m_9">This website is a project for the Web Design coursework at Abacus College. All media files are used non-commercially and for educational use.</p>
+                    <p class="address">Phone: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="m_10">(+44) 7712277220</span></p>
+                    <p class="address">Email: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="m_10">kkmonlee@gmail.com</span></p>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list">
+                        <h4 class="m_7">Menu</h4>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Trainers</a></li>
+                        <li><a href="#">Classes</a></li>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="#">Privacy</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                    <ul class="list1">
+                        <h4 class="m_7">Community</h4>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Forum</a></li>
+                        <li><a href="#">Support</a></li>
+                        <li><a href="#">Newsletter</a></li>
+                    </ul>
+                </div>
+                <div class="clear"></div>
+            </div>
+        </div>
     </div>
+
+    <div class="copyright">
+        <div class="container">
+            <div class="copy">
+                <p>Website made by Atul Anand</p>
+            </div>
+            <div class="social">
+                <ul>
+                    <li class="facebook"><a href="#"><span> </span></a></li>
+                    <li class="twitter"><a href="#"><span> </span></a></li>
+                    <li class="instagram"><a href="#"><span> </span></a></li>
+                    <li class="rss"><a href="#"><span> </span></a></li>
+                </ul>
+            </div>
+            <div class="clear"></div>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
