More stuff added

--- a/Web Design coursework/classes.html
+++ b/Web Design coursework/classes.html
@@ -62,7 +62,7 @@
                     <li><a href="trainers.html">Trainers</a></li>
                     <li class="active"><a href="classes.html">Classes</a>
                         <ul>
-                            <li><a href="single_class.html">Kickboxing</a></li>
+                            <li><a href="single_class_kickboxing.html">Kickboxing</a></li>
                             <li><a href="single_class.html">Pilates</a></li>
                             <li><a href="single_class.html">Strength Training</a></li>
                         </ul>
