Added sub-topic page For pilates

--- a/Web Design coursework/classes.html
+++ b/Web Design coursework/classes.html
@@ -63,7 +63,7 @@
                     <li class="active"><a href="classes.html">Classes</a>
                         <ul>
                             <li><a href="single_class_kickboxing.html">Kickboxing</a></li>
-                            <li><a href="single_class.html">Pilates</a></li>
+                            <li><a href="single_class_pilates.html">Pilates</a></li>
                             <li><a href="single_class.html">Strength Training</a></li>
                         </ul>
                     </li>
