--- a/Web Design coursework/classes.html
+++ b/Web Design coursework/classes.html
@@ -64,7 +64,7 @@
                         <ul>
                             <li><a href="single_class_kickboxing.html">Kickboxing</a></li>
                             <li><a href="single_class_pilates.html">Pilates</a></li>
-                            <li><a href="single_class.html">Strength Training</a></li>
+                            <li><a href="single_class_cardio.html">Cardio</a></li>
                         </ul>
                     </li>
                     <li><a href="blog.html">Blog</a></li>
