Completed cardio page

--- a/Web Design coursework/single_class_cardio.html
+++ b/Web Design coursework/single_class_cardio.html
@@ -91,38 +91,40 @@
                     <img src="images/s1.jpg" alt=""/>
                     <div class="singe_desc">
                         <p>
-                            Pilates is a system of controlled exercises that engage the mind
-                            and condition the total body. The blend of strength and flexibility
-                            training improves posture, reduces stress and creates long, lean
-                            muscles without bulking up. Pilates takes a balanced approach so
-                            that no muscle group is overworked and the body moves as an efficient,
-                            holistic system in sport and daily activity.
+                            Cardiovascular fitness is one of the most important components of physical
+                            fitness. The other components are muscular strength and endurance, and
+                            flexibility and low-back function. Cardiovascular fitness is measure as the
+                            amount of oxygen transported in the blood and pumped by the heart to the
+                            working muscles and as the efficiency of the muscles to use that oxygen.
+                            Increasing cardiovascular fitness means increasing the capability of the heart
+                            and the rest of the cardiovascual system in their most important task, to supply
+                            oxygen and energy to your body.
                         </p>
                         <ul class=single_grid>
                             <li class="grid1">
                                 <h3 class="m_13">Instructor</h3>
-                                <img src="images/s2.jpg" class="img-responsive" alt=""/>
-                                <h4>Evelyn Reed<br><span class="m_text">Pilates</span></h4>
-                                <p>Expert on pilates and weight loss</p>
+                                <img src="images/about_img7.jpg" class="img-responsive" alt=""/>
+                                <h4>Richard Skinner<br><span class="m_text">Cardio</span></h4>
+                                <p>Expert in weight loss, Zumba and cardio</p>
                             </li>
                             <li class="grid2">
                                 <h3 class="m_13">Advantages</h3>
                                 <ul class="list1_class">
-                                    <li><a href="#">improves posture</a></li>
-                                    <li><a href="#">strengthen muscles</a></li>
-                                    <li><a href="#">boost stamina</a></li>
-                                    <li><a href="#">increased muscle power</a></li>
-                                    <li><a href="#">increased flexibility</a></li>
+                                    <li><a href="#">improved heart health</a></li>
+                                    <li><a href="#">increased metabolism</a></li>
+                                    <li><a href="#">improved hormonal profile</a></li>
+                                    <li><a href="#">improved recovery ability</a></li>
+                                    <li><a href="#">management of diabetes</a></li>
                                     <li><a href="#">stress relief</a></li>
                                 </ul>
                             </li>
                             <li class="grid3">
                                 <h3 class="m_13">Pricing of class</h3>
                                 <ul class="list2_class">
-                                    <li><a href="#">3-day session<p class="price">£ &nbsp;&nbsp;24.99 </p></a><div class="clear"></div></li>
-                                    <li><a href="#">7-day session<p class="price">£ &nbsp;&nbsp;19.99 </p></a><div class="clear"></div></li>
-                                    <li><a href="#">15-day session<p class="price">£ &nbsp;&nbsp;34.99 </p></a><div class="clear"></div></li>
-                                    <li><a href="#">50-day session<p class="price">£ &nbsp;&nbsp;44.99 </p></a><div class="clear"></div></li>
+                                    <li><a href="#">3-day session<p class="price">£ &nbsp;&nbsp;20.99 </p></a><div class="clear"></div></li>
+                                    <li><a href="#">7-day session<p class="price">£ &nbsp;&nbsp;25.99 </p></a><div class="clear"></div></li>
+                                    <li><a href="#">15-day session<p class="price">£ &nbsp;&nbsp;35.99 </p></a><div class="clear"></div></li>
+                                    <li><a href="#">50-day session<p class="price">£ &nbsp;&nbsp;40.99 </p></a><div class="clear"></div></li>
                                     <li><a href="#">30-day session<p class="price">£ &nbsp;&nbsp;49.99 </p></a><div class="clear"></div></li>
                                 </ul>
                             </li>
@@ -137,7 +139,7 @@
                     <li><i class="calender"> </i><span class="week_class">Monday</span><div class="hours_class">6 am to 4pm</div>  <div class="clear"></div></li>
                     <li><i class="calender"> </i><span class="week_class">Tuesday</span><div class="hours_class">6 am to 4pm</div>  <div class="clear"></div></li>
                     <li><i class="calender"> </i><span class="week_class">Wednesday</span><div class="hours_class">6 am to 4pm</div>  <div class="clear"></div></li>
-                    <li><i class="calender"> </i><span class="week_class">Thrusday</span><div class="hours_class">6 am to 4pm</div>  <div class="clear"></div></li>
+                    <li><i class="calender"> </i><span class="week_class">Thursday</span><div class="hours_class">6 am to 4pm</div>  <div class="clear"></div></li>
                     <li><i class="calender"> </i><span class="week_class">Friday</span><div class="hours_class">6 am to 4pm</div>  <div class="clear"></div></li>
                     <li><i class="calender"> </i><span class="week_class">Saturday</span><div class="hours_class">9 am to 2pm</div>  <div class="clear"></div></li>
                     <li><i class="calender"> </i><span class="week_class">Sunday</span><div class="hours_class">9 am to 2pm</div>  <div class="clear"></div></li>
