Cross-site changes
Removed blog.html from all pages

--- a/Web Design coursework/single_class_kickboxing.html
+++ b/Web Design coursework/single_class_kickboxing.html
@@ -67,7 +67,7 @@
                             <li><a href="single_class_cardio.html">Cardio</a></li>
                         </ul>
                     </li>
-                    <li><a href="blog.html">Blog</a></li>
+
                     <li><a href="pricing.html">Pricing</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -230,16 +230,16 @@
                 <div class="col-md-4">
                     <ul class="list">
                         <h4 class="m_7">Menu</h4>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Trainers</a></li>
-                        <li><a href="#">Classes</a></li>
-                        <li><a href="#">Pricing</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="trainers.html">Trainers</a></li>
+                        <li><a href="classes.html">Classes</a></li>
+                        <li><a href="pricing.html">Pricing</a></li>
                         <li><a href="#">Privacy</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                     <ul class="list1">
                         <h4 class="m_7">Community</h4>
-                        <li><a href="#">Blog</a></li>
+
                         <li><a href="#">Forum</a></li>
                         <li><a href="#">Support</a></li>
                         <li><a href="#">Newsletter</a></li>
