Removed useless breaks

--- a/Web Design coursework/contact.html
+++ b/Web Design coursework/contact.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE HTML>
 <html>
 <head>
@@ -70,6 +69,8 @@
 				<li><a href="pricing.html">Pricing</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
+			</div>
+			<div class="clear"></div>
 			<script type="text/javascript" src="js/nav.js"></script>
 		</div>
 		<div class="clear"></div>
