--- a/Web Design coursework/contact.html
+++ b/Web Design coursework/contact.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 	<!-- start header_bottom -->
-	<div class="header-bottom">
+    <div class="header-bottom">
 	<div class="container">
 		<div class="header-bottom_left">
 			<i class="phone"></i>
@@ -58,7 +58,7 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
 				<li><a href="trainers.html">Trainers</a></li>
-				<li class="active"><a href="classes.html">Classes</a>
+				<li><a href="classes.html">Classes</a>
 					<ul>
 						<li><a href="single_class_kickboxing.html">Kickboxing</a></li>
 						<li><a href="single_class_pilates.html">Pilates</a></li>
@@ -67,7 +67,7 @@
 				</li>
 
 				<li><a href="pricing.html">Pricing</a></li>
-				<li><a href="contact.html">Contact</a></li>
+				<li class="active"><a href="contact.html">Contact</a></li>
 			</ul>
 			</div>
 			<div class="clear"></div>
@@ -75,7 +75,6 @@
 		</div>
 		<div class="clear"></div>
 	</div>
-</div>
 	<!-- end menu -->
 	<div class="main">
 	<iframe width="100%" height="420" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=United+Kingdom&amp;aq=0&amp;oq=un&amp;sll=37.0625,-95.677068&amp;sspn=48.956293,107.138672&amp;ie=UTF8&amp;hq=&amp;hnear=United+Kingdom&amp;ll=55.378051,-3.435973&amp;spn=135.795411,68.554687&amp;t=m&amp;z=2&amp;output=embed"> </iframe><br /><small><a href="http://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=United+Kingdom&amp;aq=0&amp;oq=un&amp;sll=37.0625,-95.677068&amp;sspn=48.956293,107.138672&amp;ie=UTF8&amp;hq=&amp;hnear=United+Kingdom&amp;ll=55.378051,-3.435973&amp;spn=135.795411,68.554687&amp;t=m&amp;z=2" style="color:#666;font-size:12px;text-align:left"> </a></small>
